// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hypothetical: anchored cells > a fully-loaded conditional: motion goal, direct object, aspect, tense and a modal 1`] = `
{
  "de": "wenn das Tier würde gerade zur Antarktis gehen müssen, der Engel würde im Begriff das Wasser sein zu trinken.",
  "en": "if the animal had to be going to Antarctica, the angel would be about to drink the water.",
  "es": "si el animal debiera estar yendo a la Antártida, el ángel estaría a punto de beber el agua.",
  "fr": "si l'animal devait être en train d'aller à l'Antarctique, l'ange serait sur le point de boire l'eau.",
  "it": "se l'animale dovesse stare andando all'Antartide, l'angelo starebbe per bere l'acqua.",
  "ja": "もし動物が南極大陸へ行ったら、天使は水を飲むところです。",
  "pt": "se o animal devesse estar indo à Antártida, o anjo estaria prestes a beber a água.",
}
`;

exports[`hypothetical: anchored cells > prospective present main, with a future progressive MUST-governed if clause 1`] = `
{
  "de": "wenn der Kater würde gerade essen müssen, der Hund würde im Begriff sein zu laufen.",
  "en": "if the cat had to be eating, the dog would be about to run.",
  "es": "si el gato debiera estar comiendo, el perro estaría a punto de correr.",
  "fr": "si le chat devait être en train de manger, le chien serait sur le point de courir.",
  "it": "se il gatto dovesse stare mangiando, il cane starebbe per correre.",
  "ja": "もし猫が食べたら、犬は走るところです。",
  "pt": "se o gato devesse estar comendo, o cão estaria prestes a correr.",
}
`;

exports[`main: future · neutral > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estuviera comiendo, el perro correría.",
    "fr": "si le chat était en train de manger, le chien courrait.",
    "it": "se il gatto stesse mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estivesse comendo, o cão correria.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estuviera a punto de comer, el perro correría.",
    "fr": "si le chat était sur le point de manger, le chien courrait.",
    "it": "se il gatto stesse per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estivesse prestes a comer, o cão correria.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato hubiera comido, el perro correría.",
    "fr": "si le chat avait mangé, le chien courrait.",
    "it": "se il gatto avesse mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato tivesse comido, o cão correria.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estuviera comiendo, el perro correría.",
    "fr": "si le chat était en train de manger, le chien courrait.",
    "it": "se il gatto stesse mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estivesse comendo, o cão correria.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estuviera a punto de comer, el perro correría.",
    "fr": "si le chat était sur le point de manger, le chien courrait.",
    "it": "se il gatto stesse per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estivesse prestes a comer, o cão correria.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato hubiera comido, el perro correría.",
    "fr": "si le chat avait mangé, le chien courrait.",
    "it": "se il gatto avesse mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato tivesse comido, o cão correria.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estuviera comiendo, el perro correría.",
    "fr": "si le chat était en train de manger, le chien courrait.",
    "it": "se il gatto stesse mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estivesse comendo, o cão correria.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estuviera a punto de comer, el perro correría.",
    "fr": "si le chat était sur le point de manger, le chien courrait.",
    "it": "se il gatto stesse per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estivesse prestes a comer, o cão correria.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato hubiera comido, el perro correría.",
    "fr": "si le chat avait mangé, le chien courrait.",
    "it": "se il gatto avesse mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato tivesse comido, o cão correria.",
  },
}
`;

exports[`main: future · progressive > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estaría corriendo.",
    "fr": "si le chat mangeait, le chien serait en train de courir.",
    "it": "se il gatto mangiasse, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comesse, o cão estaria correndo.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estuviera comiendo, el perro estaría corriendo.",
    "fr": "si le chat était en train de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estivesse comendo, o cão estaria correndo.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estuviera a punto de comer, el perro estaría corriendo.",
    "fr": "si le chat était sur le point de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria correndo.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato hubiera comido, el perro estaría corriendo.",
    "fr": "si le chat avait mangé, le chien serait en train de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato tivesse comido, o cão estaria correndo.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estaría corriendo.",
    "fr": "si le chat mangeait, le chien serait en train de courir.",
    "it": "se il gatto mangiasse, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comesse, o cão estaria correndo.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estuviera comiendo, el perro estaría corriendo.",
    "fr": "si le chat était en train de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estivesse comendo, o cão estaria correndo.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estuviera a punto de comer, el perro estaría corriendo.",
    "fr": "si le chat était sur le point de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria correndo.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato hubiera comido, el perro estaría corriendo.",
    "fr": "si le chat avait mangé, le chien serait en train de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato tivesse comido, o cão estaria correndo.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estaría corriendo.",
    "fr": "si le chat mangeait, le chien serait en train de courir.",
    "it": "se il gatto mangiasse, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comesse, o cão estaria correndo.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estuviera comiendo, el perro estaría corriendo.",
    "fr": "si le chat était en train de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estivesse comendo, o cão estaria correndo.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estuviera a punto de comer, el perro estaría corriendo.",
    "fr": "si le chat était sur le point de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria correndo.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato hubiera comido, el perro estaría corriendo.",
    "fr": "si le chat avait mangé, le chien serait en train de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato tivesse comido, o cão estaria correndo.",
  },
}
`;

exports[`main: future · prospective > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estaría a punto de correr.",
    "fr": "si le chat mangeait, le chien serait sur le point de courir.",
    "it": "se il gatto mangiasse, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comesse, o cão estaria prestes a correr.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estuviera comiendo, el perro estaría a punto de correr.",
    "fr": "si le chat était en train de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estivesse comendo, o cão estaria prestes a correr.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estuviera a punto de comer, el perro estaría a punto de correr.",
    "fr": "si le chat était sur le point de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria prestes a correr.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato hubiera comido, el perro estaría a punto de correr.",
    "fr": "si le chat avait mangé, le chien serait sur le point de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato tivesse comido, o cão estaria prestes a correr.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estaría a punto de correr.",
    "fr": "si le chat mangeait, le chien serait sur le point de courir.",
    "it": "se il gatto mangiasse, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comesse, o cão estaria prestes a correr.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estuviera comiendo, el perro estaría a punto de correr.",
    "fr": "si le chat était en train de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estivesse comendo, o cão estaria prestes a correr.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estuviera a punto de comer, el perro estaría a punto de correr.",
    "fr": "si le chat était sur le point de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria prestes a correr.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato hubiera comido, el perro estaría a punto de correr.",
    "fr": "si le chat avait mangé, le chien serait sur le point de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato tivesse comido, o cão estaria prestes a correr.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estaría a punto de correr.",
    "fr": "si le chat mangeait, le chien serait sur le point de courir.",
    "it": "se il gatto mangiasse, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comesse, o cão estaria prestes a correr.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estuviera comiendo, el perro estaría a punto de correr.",
    "fr": "si le chat était en train de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estivesse comendo, o cão estaria prestes a correr.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estuviera a punto de comer, el perro estaría a punto de correr.",
    "fr": "si le chat était sur le point de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria prestes a correr.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato hubiera comido, el perro estaría a punto de correr.",
    "fr": "si le chat avait mangé, le chien serait sur le point de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato tivesse comido, o cão estaria prestes a correr.",
  },
}
`;

exports[`main: future · resultative > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro habría corrido.",
    "fr": "si le chat mangeait, le chien aurait couru.",
    "it": "se il gatto mangiasse, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comesse, o cão teria corrido.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estuviera comiendo, el perro habría corrido.",
    "fr": "si le chat était en train de manger, le chien aurait couru.",
    "it": "se il gatto stesse mangiando, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estivesse comendo, o cão teria corrido.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estuviera a punto de comer, el perro habría corrido.",
    "fr": "si le chat était sur le point de manger, le chien aurait couru.",
    "it": "se il gatto stesse per mangiare, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estivesse prestes a comer, o cão teria corrido.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato hubiera comido, el perro habría corrido.",
    "fr": "si le chat avait mangé, le chien aurait couru.",
    "it": "se il gatto avesse mangiato, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato tivesse comido, o cão teria corrido.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro habría corrido.",
    "fr": "si le chat mangeait, le chien aurait couru.",
    "it": "se il gatto mangiasse, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comesse, o cão teria corrido.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estuviera comiendo, el perro habría corrido.",
    "fr": "si le chat était en train de manger, le chien aurait couru.",
    "it": "se il gatto stesse mangiando, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estivesse comendo, o cão teria corrido.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estuviera a punto de comer, el perro habría corrido.",
    "fr": "si le chat était sur le point de manger, le chien aurait couru.",
    "it": "se il gatto stesse per mangiare, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estivesse prestes a comer, o cão teria corrido.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato hubiera comido, el perro habría corrido.",
    "fr": "si le chat avait mangé, le chien aurait couru.",
    "it": "se il gatto avesse mangiato, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato tivesse comido, o cão teria corrido.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro habría corrido.",
    "fr": "si le chat mangeait, le chien aurait couru.",
    "it": "se il gatto mangiasse, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comesse, o cão teria corrido.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estuviera comiendo, el perro habría corrido.",
    "fr": "si le chat était en train de manger, le chien aurait couru.",
    "it": "se il gatto stesse mangiando, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estivesse comendo, o cão teria corrido.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estuviera a punto de comer, el perro habría corrido.",
    "fr": "si le chat était sur le point de manger, le chien aurait couru.",
    "it": "se il gatto stesse per mangiare, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estivesse prestes a comer, o cão teria corrido.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato hubiera comido, el perro habría corrido.",
    "fr": "si le chat avait mangé, le chien aurait couru.",
    "it": "se il gatto avesse mangiato, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato tivesse comido, o cão teria corrido.",
  },
}
`;

exports[`main: past · neutral > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estuviera comiendo, el perro correría.",
    "fr": "si le chat était en train de manger, le chien courrait.",
    "it": "se il gatto stesse mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato estivesse comendo, o cão correria.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estuviera a punto de comer, el perro correría.",
    "fr": "si le chat était sur le point de manger, le chien courrait.",
    "it": "se il gatto stesse per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato estivesse prestes a comer, o cão correria.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato hubiera comido, el perro correría.",
    "fr": "si le chat avait mangé, le chien courrait.",
    "it": "se il gatto avesse mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato tivesse comido, o cão correria.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estuviera comiendo, el perro correría.",
    "fr": "si le chat était en train de manger, le chien courrait.",
    "it": "se il gatto stesse mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato estivesse comendo, o cão correria.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estuviera a punto de comer, el perro correría.",
    "fr": "si le chat était sur le point de manger, le chien courrait.",
    "it": "se il gatto stesse per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato estivesse prestes a comer, o cão correria.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato hubiera comido, el perro correría.",
    "fr": "si le chat avait mangé, le chien courrait.",
    "it": "se il gatto avesse mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato tivesse comido, o cão correria.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estuviera comiendo, el perro correría.",
    "fr": "si le chat était en train de manger, le chien courrait.",
    "it": "se il gatto stesse mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato estivesse comendo, o cão correria.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estuviera a punto de comer, el perro correría.",
    "fr": "si le chat était sur le point de manger, le chien courrait.",
    "it": "se il gatto stesse per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato estivesse prestes a comer, o cão correria.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato hubiera comido, el perro correría.",
    "fr": "si le chat avait mangé, le chien courrait.",
    "it": "se il gatto avesse mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato tivesse comido, o cão correria.",
  },
}
`;

exports[`main: past · progressive > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estaría corriendo.",
    "fr": "si le chat mangeait, le chien serait en train de courir.",
    "it": "se il gatto mangiasse, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato comesse, o cão estaria correndo.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estuviera comiendo, el perro estaría corriendo.",
    "fr": "si le chat était en train de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato estivesse comendo, o cão estaria correndo.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estuviera a punto de comer, el perro estaría corriendo.",
    "fr": "si le chat était sur le point de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria correndo.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato hubiera comido, el perro estaría corriendo.",
    "fr": "si le chat avait mangé, le chien serait en train de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato tivesse comido, o cão estaria correndo.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estaría corriendo.",
    "fr": "si le chat mangeait, le chien serait en train de courir.",
    "it": "se il gatto mangiasse, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato comesse, o cão estaria correndo.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estuviera comiendo, el perro estaría corriendo.",
    "fr": "si le chat était en train de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato estivesse comendo, o cão estaria correndo.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estuviera a punto de comer, el perro estaría corriendo.",
    "fr": "si le chat était sur le point de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria correndo.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato hubiera comido, el perro estaría corriendo.",
    "fr": "si le chat avait mangé, le chien serait en train de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato tivesse comido, o cão estaria correndo.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estaría corriendo.",
    "fr": "si le chat mangeait, le chien serait en train de courir.",
    "it": "se il gatto mangiasse, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato comesse, o cão estaria correndo.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estuviera comiendo, el perro estaría corriendo.",
    "fr": "si le chat était en train de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato estivesse comendo, o cão estaria correndo.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estuviera a punto de comer, el perro estaría corriendo.",
    "fr": "si le chat était sur le point de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria correndo.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato hubiera comido, el perro estaría corriendo.",
    "fr": "si le chat avait mangé, le chien serait en train de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato tivesse comido, o cão estaria correndo.",
  },
}
`;

exports[`main: past · prospective > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estaría a punto de correr.",
    "fr": "si le chat mangeait, le chien serait sur le point de courir.",
    "it": "se il gatto mangiasse, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato comesse, o cão estaria prestes a correr.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estuviera comiendo, el perro estaría a punto de correr.",
    "fr": "si le chat était en train de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato estivesse comendo, o cão estaria prestes a correr.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estuviera a punto de comer, el perro estaría a punto de correr.",
    "fr": "si le chat était sur le point de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria prestes a correr.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato hubiera comido, el perro estaría a punto de correr.",
    "fr": "si le chat avait mangé, le chien serait sur le point de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato tivesse comido, o cão estaria prestes a correr.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estaría a punto de correr.",
    "fr": "si le chat mangeait, le chien serait sur le point de courir.",
    "it": "se il gatto mangiasse, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato comesse, o cão estaria prestes a correr.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estuviera comiendo, el perro estaría a punto de correr.",
    "fr": "si le chat était en train de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato estivesse comendo, o cão estaria prestes a correr.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estuviera a punto de comer, el perro estaría a punto de correr.",
    "fr": "si le chat était sur le point de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria prestes a correr.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato hubiera comido, el perro estaría a punto de correr.",
    "fr": "si le chat avait mangé, le chien serait sur le point de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato tivesse comido, o cão estaria prestes a correr.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estaría a punto de correr.",
    "fr": "si le chat mangeait, le chien serait sur le point de courir.",
    "it": "se il gatto mangiasse, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato comesse, o cão estaria prestes a correr.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estuviera comiendo, el perro estaría a punto de correr.",
    "fr": "si le chat était en train de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato estivesse comendo, o cão estaria prestes a correr.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estuviera a punto de comer, el perro estaría a punto de correr.",
    "fr": "si le chat était sur le point de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria prestes a correr.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato hubiera comido, el perro estaría a punto de correr.",
    "fr": "si le chat avait mangé, le chien serait sur le point de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato tivesse comido, o cão estaria prestes a correr.",
  },
}
`;

exports[`main: past · resultative > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro habría corrido.",
    "fr": "si le chat mangeait, le chien aurait couru.",
    "it": "se il gatto mangiasse, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato comesse, o cão teria corrido.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estuviera comiendo, el perro habría corrido.",
    "fr": "si le chat était en train de manger, le chien aurait couru.",
    "it": "se il gatto stesse mangiando, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato estivesse comendo, o cão teria corrido.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estuviera a punto de comer, el perro habría corrido.",
    "fr": "si le chat était sur le point de manger, le chien aurait couru.",
    "it": "se il gatto stesse per mangiare, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato estivesse prestes a comer, o cão teria corrido.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato hubiera comido, el perro habría corrido.",
    "fr": "si le chat avait mangé, le chien aurait couru.",
    "it": "se il gatto avesse mangiato, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato tivesse comido, o cão teria corrido.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro habría corrido.",
    "fr": "si le chat mangeait, le chien aurait couru.",
    "it": "se il gatto mangiasse, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato comesse, o cão teria corrido.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estuviera comiendo, el perro habría corrido.",
    "fr": "si le chat était en train de manger, le chien aurait couru.",
    "it": "se il gatto stesse mangiando, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato estivesse comendo, o cão teria corrido.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estuviera a punto de comer, el perro habría corrido.",
    "fr": "si le chat était sur le point de manger, le chien aurait couru.",
    "it": "se il gatto stesse per mangiare, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato estivesse prestes a comer, o cão teria corrido.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato hubiera comido, el perro habría corrido.",
    "fr": "si le chat avait mangé, le chien aurait couru.",
    "it": "se il gatto avesse mangiato, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato tivesse comido, o cão teria corrido.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro habría corrido.",
    "fr": "si le chat mangeait, le chien aurait couru.",
    "it": "se il gatto mangiasse, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato comesse, o cão teria corrido.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estuviera comiendo, el perro habría corrido.",
    "fr": "si le chat était en train de manger, le chien aurait couru.",
    "it": "se il gatto stesse mangiando, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato estivesse comendo, o cão teria corrido.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estuviera a punto de comer, el perro habría corrido.",
    "fr": "si le chat était sur le point de manger, le chien aurait couru.",
    "it": "se il gatto stesse per mangiare, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato estivesse prestes a comer, o cão teria corrido.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato hubiera comido, el perro habría corrido.",
    "fr": "si le chat avait mangé, le chien aurait couru.",
    "it": "se il gatto avesse mangiato, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato tivesse comido, o cão teria corrido.",
  },
}
`;

exports[`main: present · neutral > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estuviera comiendo, el perro correría.",
    "fr": "si le chat était en train de manger, le chien courrait.",
    "it": "se il gatto stesse mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estivesse comendo, o cão correria.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estuviera a punto de comer, el perro correría.",
    "fr": "si le chat était sur le point de manger, le chien courrait.",
    "it": "se il gatto stesse per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estivesse prestes a comer, o cão correria.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato hubiera comido, el perro correría.",
    "fr": "si le chat avait mangé, le chien courrait.",
    "it": "se il gatto avesse mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato tivesse comido, o cão correria.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estuviera comiendo, el perro correría.",
    "fr": "si le chat était en train de manger, le chien courrait.",
    "it": "se il gatto stesse mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estivesse comendo, o cão correria.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estuviera a punto de comer, el perro correría.",
    "fr": "si le chat était sur le point de manger, le chien courrait.",
    "it": "se il gatto stesse per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estivesse prestes a comer, o cão correria.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato hubiera comido, el perro correría.",
    "fr": "si le chat avait mangé, le chien courrait.",
    "it": "se il gatto avesse mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato tivesse comido, o cão correria.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estuviera comiendo, el perro correría.",
    "fr": "si le chat était en train de manger, le chien courrait.",
    "it": "se il gatto stesse mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estivesse comendo, o cão correria.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estuviera a punto de comer, el perro correría.",
    "fr": "si le chat était sur le point de manger, le chien courrait.",
    "it": "se il gatto stesse per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estivesse prestes a comer, o cão correria.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato hubiera comido, el perro correría.",
    "fr": "si le chat avait mangé, le chien courrait.",
    "it": "se il gatto avesse mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato tivesse comido, o cão correria.",
  },
}
`;

exports[`main: present · progressive > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estaría corriendo.",
    "fr": "si le chat mangeait, le chien serait en train de courir.",
    "it": "se il gatto mangiasse, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comesse, o cão estaria correndo.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estuviera comiendo, el perro estaría corriendo.",
    "fr": "si le chat était en train de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estivesse comendo, o cão estaria correndo.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estuviera a punto de comer, el perro estaría corriendo.",
    "fr": "si le chat était sur le point de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria correndo.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato hubiera comido, el perro estaría corriendo.",
    "fr": "si le chat avait mangé, le chien serait en train de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato tivesse comido, o cão estaria correndo.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estaría corriendo.",
    "fr": "si le chat mangeait, le chien serait en train de courir.",
    "it": "se il gatto mangiasse, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comesse, o cão estaria correndo.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estuviera comiendo, el perro estaría corriendo.",
    "fr": "si le chat était en train de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estivesse comendo, o cão estaria correndo.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estuviera a punto de comer, el perro estaría corriendo.",
    "fr": "si le chat était sur le point de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria correndo.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato hubiera comido, el perro estaría corriendo.",
    "fr": "si le chat avait mangé, le chien serait en train de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato tivesse comido, o cão estaria correndo.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estaría corriendo.",
    "fr": "si le chat mangeait, le chien serait en train de courir.",
    "it": "se il gatto mangiasse, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comesse, o cão estaria correndo.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estuviera comiendo, el perro estaría corriendo.",
    "fr": "si le chat était en train de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estivesse comendo, o cão estaria correndo.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estuviera a punto de comer, el perro estaría corriendo.",
    "fr": "si le chat était sur le point de manger, le chien serait en train de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria correndo.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato hubiera comido, el perro estaría corriendo.",
    "fr": "si le chat avait mangé, le chien serait en train de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato tivesse comido, o cão estaria correndo.",
  },
}
`;

exports[`main: present · prospective > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estaría a punto de correr.",
    "fr": "si le chat mangeait, le chien serait sur le point de courir.",
    "it": "se il gatto mangiasse, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comesse, o cão estaria prestes a correr.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estuviera comiendo, el perro estaría a punto de correr.",
    "fr": "si le chat était en train de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estivesse comendo, o cão estaria prestes a correr.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estuviera a punto de comer, el perro estaría a punto de correr.",
    "fr": "si le chat était sur le point de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria prestes a correr.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato hubiera comido, el perro estaría a punto de correr.",
    "fr": "si le chat avait mangé, le chien serait sur le point de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato tivesse comido, o cão estaria prestes a correr.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estaría a punto de correr.",
    "fr": "si le chat mangeait, le chien serait sur le point de courir.",
    "it": "se il gatto mangiasse, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comesse, o cão estaria prestes a correr.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estuviera comiendo, el perro estaría a punto de correr.",
    "fr": "si le chat était en train de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estivesse comendo, o cão estaria prestes a correr.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estuviera a punto de comer, el perro estaría a punto de correr.",
    "fr": "si le chat était sur le point de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria prestes a correr.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato hubiera comido, el perro estaría a punto de correr.",
    "fr": "si le chat avait mangé, le chien serait sur le point de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato tivesse comido, o cão estaria prestes a correr.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estaría a punto de correr.",
    "fr": "si le chat mangeait, le chien serait sur le point de courir.",
    "it": "se il gatto mangiasse, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comesse, o cão estaria prestes a correr.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estuviera comiendo, el perro estaría a punto de correr.",
    "fr": "si le chat était en train de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse mangiando, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estivesse comendo, o cão estaria prestes a correr.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estuviera a punto de comer, el perro estaría a punto de correr.",
    "fr": "si le chat était sur le point de manger, le chien serait sur le point de courir.",
    "it": "se il gatto stesse per mangiare, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estivesse prestes a comer, o cão estaria prestes a correr.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato hubiera comido, el perro estaría a punto de correr.",
    "fr": "si le chat avait mangé, le chien serait sur le point de courir.",
    "it": "se il gatto avesse mangiato, il cane starebbe per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato tivesse comido, o cão estaria prestes a correr.",
  },
}
`;

exports[`main: present · resultative > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro habría corrido.",
    "fr": "si le chat mangeait, le chien aurait couru.",
    "it": "se il gatto mangiasse, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comesse, o cão teria corrido.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estuviera comiendo, el perro habría corrido.",
    "fr": "si le chat était en train de manger, le chien aurait couru.",
    "it": "se il gatto stesse mangiando, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estivesse comendo, o cão teria corrido.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estuviera a punto de comer, el perro habría corrido.",
    "fr": "si le chat était sur le point de manger, le chien aurait couru.",
    "it": "se il gatto stesse per mangiare, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estivesse prestes a comer, o cão teria corrido.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato hubiera comido, el perro habría corrido.",
    "fr": "si le chat avait mangé, le chien aurait couru.",
    "it": "se il gatto avesse mangiato, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato tivesse comido, o cão teria corrido.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro habría corrido.",
    "fr": "si le chat mangeait, le chien aurait couru.",
    "it": "se il gatto mangiasse, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comesse, o cão teria corrido.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estuviera comiendo, el perro habría corrido.",
    "fr": "si le chat était en train de manger, le chien aurait couru.",
    "it": "se il gatto stesse mangiando, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estivesse comendo, o cão teria corrido.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estuviera a punto de comer, el perro habría corrido.",
    "fr": "si le chat était sur le point de manger, le chien aurait couru.",
    "it": "se il gatto stesse per mangiare, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estivesse prestes a comer, o cão teria corrido.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato hubiera comido, el perro habría corrido.",
    "fr": "si le chat avait mangé, le chien aurait couru.",
    "it": "se il gatto avesse mangiato, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato tivesse comido, o cão teria corrido.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro habría corrido.",
    "fr": "si le chat mangeait, le chien aurait couru.",
    "it": "se il gatto mangiasse, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comesse, o cão teria corrido.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estuviera comiendo, el perro habría corrido.",
    "fr": "si le chat était en train de manger, le chien aurait couru.",
    "it": "se il gatto stesse mangiando, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estivesse comendo, o cão teria corrido.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estuviera a punto de comer, el perro habría corrido.",
    "fr": "si le chat était sur le point de manger, le chien aurait couru.",
    "it": "se il gatto stesse per mangiare, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estivesse prestes a comer, o cão teria corrido.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato hubiera comido, el perro habría corrido.",
    "fr": "si le chat avait mangé, le chien aurait couru.",
    "it": "se il gatto avesse mangiato, il cane avrebbe corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato tivesse comido, o cão teria corrido.",
  },
}
`;
